...
      }
    }

    return Scaffold(
      appBar: AppBar(
        title: Text(
          isDesktop ? '' : 'Finance Manager',
        ), // Sidebar has it on desktop
        elevation: 0,
        backgroundColor: Colors.transparent,
        actions: [
          _buildShortcutButton(
            context: context,
...
