...
  @override
  Widget build(BuildContext context) {
    return DefaultTabController(
      length: 3,
      child: Scaffold(
        appBar: AppBar(
          title: const Text("Centre d'Aide"),
          bottom: const TabBar(
            tabs: [
              Tab(icon: Icon(Icons.lightbulb_outline), text: "Concepts"),
              Tab(icon: Icon(Icons.menu_book), text: "Guide"),
              Tab(icon: Icon(Icons.account_balance), text: "Méthode"),
            ],
          ),
        ),
        body: TabBarView(
          children: [
...
